# docwright

./: .gitignore  README.md  pyproject.toml  setup.py
codex_entry/: AGENTS.md  README.md  __init__.py
codex_entry/samples/: __init__.py  attention_fixture.py
docs/: agent_integration_model_v1.md  bootstrap_status_v1.md  codex_adapter_design_v1.md  codex_adapter_execution_checklist_v1.md  codex_attention_host_checklist_v1.md  codex_direct_library_integration_v1.md  codex_host_quickstart_v1.md  core_agent_boundary_v1.md  document_ir_contract_v1.md  docwright_document_boundary_v1.md  execution_checklist_v1.md  implementation_master_plan_v1.md  migration_checklist_v1.md  navigation_runtime_checklist_v1.md  navigation_runtime_requirements_v1.md  node_ref_compatibility_layer_v1.md  node_ref_locator_execution_checklist_v1.md  node_ref_locator_migration_v1.md  pdf_ir_fixture_strategy_v1.md  post_milestone_completion_checklist_v1.md  prototype_migration_mapping_v1.md  runtime_api_contract_v1.md  target_repo_structure_v1.md  workspace_completion_checklist_v1.md  workspace_profile_design_v1.md  workspace_sandbox_design_v1.md  workspace_secure_sandbox_design_v1.md  workspace_session_contract_v1.md
src/docwright/: __init__.py  _compat.py
tests/adapters/: test_adapter_capability_core_integration.py  test_adapter_capability_matrix.py  test_agent_base.py  test_codex_adapter.py  test_codex_prompting.py  test_codex_tools.py  test_companion_boundary.py  test_provider_boundary.py
tests/capabilities/: test_capability_base.py  test_guided_reading.py  test_manual_task.py
(+104 files in other folders)
